--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:name=".UmbrellaApp"
         >
         <activity
-            android:name=".ui.MainActivity"
+            android:name=".ui.activities.SplashActivity"
             android:label="@string/app_name"
             >
             <intent-filter>
