--- a/build.gradle
+++ b/build.gradle
@@ -78,6 +78,10 @@ ext {
   FACEBOOK_VERSION = "1.5.0"
 }
 
+kapt {
+  generateStubs = true
+}
+
 dependencies {
   implementation "com.android.support:support-v4:$SUPPORT_LIB_VERSION"
   implementation "com.android.support:support-annotations:$SUPPORT_LIB_VERSION"
@@ -106,17 +110,19 @@ dependencies {
   implementation 'org.greenrobot:eventbus:3.1.1'
 
   implementation 'com.google.dagger:dagger:2.14.1'
-  kapt 'com.google.dagger:dagger-compiler:2.13'
+  kapt 'com.google.dagger:dagger-compiler:2.14.1'
 
   implementation "com.f2prateek.rx.preferences:rx-preferences:1.0.2"
 
   implementation 'com.github.MatteoBattilana:WeatherView:2.0.3'
 
+  implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
   implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:0.26.1"
-  implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:0.22.5"
+  implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:0.26.1"
 
   implementation "android.arch.persistence.room:runtime:$ROOM_VERSION"
   annotationProcessor "android.arch.persistence.room:compiler:$ROOM_VERSION"
+  kapt "android.arch.persistence.room:compiler:$ROOM_VERSION"
 
   debugImplementation "com.facebook.stetho:stetho:$FACEBOOK_VERSION"
   debugImplementation "com.facebook.stetho:stetho-okhttp3:$FACEBOOK_VERSION"
