--- a/build.gradle
+++ b/build.gradle
@@ -116,6 +116,8 @@ dependencies {
 
   implementation 'com.github.MatteoBattilana:WeatherView:2.0.3'
 
+  implementation 'io.nlopez.smartlocation:library:3.3.3'
+
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
   implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:0.26.1"
   implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:0.26.1"
