--- a/build.gradle
+++ b/build.gradle
@@ -118,7 +118,9 @@ dependencies {
 
   implementation 'io.nlopez.smartlocation:library:3.3.3'
 
-  implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+  implementation 'com.karumi:dexter:5.0.0'
+
+  implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
   implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:0.26.1"
   implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:0.26.1"
 
