--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -25,6 +25,12 @@
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
     </activity>
+    <activity
+        android:name=".ui.activities.HomeActivity"
+        android:label="@string/app_name"
+        android:theme="@style/Theme.Umbrella"
+        >
+    </activity>
   </application>
 
 </manifest>
