--- a/build.gradle
+++ b/build.gradle
@@ -55,6 +55,7 @@ android {
     buildConfigField "String", "API_KEY", "\"$project.darkSkyApiKey\""
 
     signingConfig signingConfigs.umbrella
+    vectorDrawables.useSupportLibrary = true
   }
 
   buildTypes {
@@ -110,6 +111,8 @@ dependencies {
   implementation 'org.greenrobot:eventbus:3.1.1'
 
   implementation 'com.google.dagger:dagger:2.14.1'
+  implementation 'com.android.support:support-v4:27.1.1'
+  implementation 'com.android.support:support-vector-drawable:27.1.1'
   kapt 'com.google.dagger:dagger-compiler:2.14.1'
 
   implementation "com.f2prateek.rx.preferences:rx-preferences:1.0.2"
