--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -17,8 +17,7 @@
     <activity
         android:name=".ui.activities.SplashActivity"
         android:label="@string/app_name"
-        android:theme="@style/Theme.Umbrella.FullScreen"
-        >
+        android:theme="@style/Theme.Umbrella.FullScreen">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
 
@@ -28,8 +27,13 @@
     <activity
         android:name=".ui.activities.HomeActivity"
         android:label="@string/app_name"
-        android:theme="@style/Theme.Umbrella"
-        >
+        android:theme="@style/Theme.Umbrella">
+    </activity>
+    <activity
+        android:name=".ui.activities.SettingsActivity"
+        android:label="@string/app_name"
+        android:parentActivityName=".ui.activities.HomeActivity"
+        android:theme="@style/Theme.Umbrella.Settings">
     </activity>
   </application>
 
