--- a/build.gradle
+++ b/build.gradle
@@ -1,22 +1,22 @@
 buildscript {
-  ext.kotlin_version = '1.2.61'
-  repositories {
-    jcenter()
-    google()
-    maven { url 'https://oss.jfrog.org/libs-snapshot' }
-  }
-  dependencies {
-    classpath 'com.android.tools.build:gradle:3.2.1'
-    classpath 'com.github.ben-manes:gradle-versions-plugin:0.15.0'
-    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-  }
+    ext.kotlin_version = '1.2.61'
+    repositories {
+        jcenter()
+        google()
+        maven {url 'https://oss.jfrog.org/libs-snapshot'}
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath 'com.github.ben-manes:gradle-versions-plugin:0.15.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
 }
 
 repositories {
-  jcenter()
-  google()
-  maven { url 'https://oss.jfrog.org/libs-snapshot' }
-  maven { url 'https://jitpack.io' }
+    jcenter()
+    google()
+    maven {url 'https://oss.jfrog.org/libs-snapshot'}
+    maven {url 'https://jitpack.io'}
 }
 
 apply plugin: 'com.android.application'
@@ -29,113 +29,115 @@ apply plugin: 'com.github.ben-manes.versions'
 // parameter or `DARK_SKY_API_KEY` as a System Environment variable to provide dark
 // sky api key to this project
 ext.darkSkyApiKey = project.hasProperty('com.nerdery.umbrella.darkskyapikey') ?
-    project.getProperty('com.nerdery.umbrella.darkskyapikey') :
-    System.getenv('DARK_SKY_API_KEY') ?: ''
+        project.getProperty('com.nerdery.umbrella.darkskyapikey') : System.getenv('DARK_SKY_API_KEY') ?: ''
 
 android {
-  compileSdkVersion 27
-  buildToolsVersion '28.0.3'
+    compileSdkVersion 27
+    buildToolsVersion '28.0.3'
 
-  signingConfigs {
-    umbrella {
-      storeFile file('debug.keystore')
-      storePassword 'android'
-      keyAlias 'androiddebugkey'
-      keyPassword 'android'
+    signingConfigs {
+        umbrella {
+            storeFile file('debug.keystore')
+            storePassword 'android'
+            keyAlias 'androiddebugkey'
+            keyPassword 'android'
+        }
     }
-  }
 
-  defaultConfig {
-    applicationId "com.nerdery.umbrella"
-    minSdkVersion 19
-    targetSdkVersion 27
-    versionCode 1
-    versionName '1.0'
+    defaultConfig {
+        applicationId "com.nerdery.umbrella"
+        minSdkVersion 19
+        targetSdkVersion 28
+        versionCode 1
+        versionName '1.0'
 
-    buildConfigField "String", "API_KEY", "\"$project.darkSkyApiKey\""
+        buildConfigField "String", "API_KEY", "\"$project.darkSkyApiKey\""
 
-    signingConfig signingConfigs.umbrella
-    vectorDrawables.useSupportLibrary = true
-  }
-
-  buildTypes {
-    debug {
-      applicationIdSuffix '.debug'
+        signingConfig signingConfigs.umbrella
+        vectorDrawables.useSupportLibrary = true
+        multiDexEnabled true
     }
-  }
 
-  compileOptions {
-    sourceCompatibility JavaVersion.VERSION_1_8
-    targetCompatibility JavaVersion.VERSION_1_8
-  }
+    buildTypes {
+        debug {
+            applicationIdSuffix '.debug'
+        }
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 ext {
-  SUPPORT_LIB_VERSION = "27.1.1"
-  RETROFIT_VERSION = "2.3.0"
-  OKHTTP_VERSION = "3.9.0"
-  ROOM_VERSION = "1.1.1"
-  PICASSO_VERSION = "2.71828"
-  FACEBOOK_VERSION = "1.5.0"
+    SUPPORT_LIB_VERSION = "27.1.1"
+    RETROFIT_VERSION = "2.3.0"
+    OKHTTP_VERSION = "3.9.0"
+    ROOM_VERSION = "1.1.1"
+    PICASSO_VERSION = "2.71828"
+    FACEBOOK_VERSION = "1.5.0"
 }
 
 kapt {
-  generateStubs = true
+    generateStubs = true
 }
 
 dependencies {
-  implementation "com.android.support:support-v4:$SUPPORT_LIB_VERSION"
-  implementation "com.android.support:support-annotations:$SUPPORT_LIB_VERSION"
-  implementation "com.android.support:appcompat-v7:$SUPPORT_LIB_VERSION"
-  implementation "com.android.support:recyclerview-v7:$SUPPORT_LIB_VERSION"
-  implementation "com.android.support:design:$SUPPORT_LIB_VERSION"
-  implementation "com.android.support:cardview-v7:$SUPPORT_LIB_VERSION"
-  implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation "com.android.support:support-v4:$SUPPORT_LIB_VERSION"
+    implementation "com.android.support:support-annotations:$SUPPORT_LIB_VERSION"
+    implementation "com.android.support:appcompat-v7:$SUPPORT_LIB_VERSION"
+    implementation "com.android.support:recyclerview-v7:$SUPPORT_LIB_VERSION"
+    implementation "com.android.support:design:$SUPPORT_LIB_VERSION"
+    implementation "com.android.support:cardview-v7:$SUPPORT_LIB_VERSION"
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 
-  implementation "com.squareup.okhttp3:okhttp:$OKHTTP_VERSION"
-  implementation "com.squareup.okhttp3:logging-interceptor:$OKHTTP_VERSION"
-  implementation "com.squareup.picasso:picasso:$PICASSO_VERSION"
-  implementation "com.squareup.retrofit2:retrofit:$RETROFIT_VERSION"
-  implementation "com.squareup.retrofit2:converter-moshi:$RETROFIT_VERSION"
-  implementation "com.squareup.retrofit2:converter-gson:$RETROFIT_VERSION"
-  implementation "com.squareup.retrofit2:adapter-rxjava2:$RETROFIT_VERSION"
+    implementation "com.squareup.okhttp3:okhttp:$OKHTTP_VERSION"
+    implementation "com.squareup.okhttp3:logging-interceptor:$OKHTTP_VERSION"
+    implementation "com.squareup.picasso:picasso:$PICASSO_VERSION"
+    implementation "com.squareup.retrofit2:retrofit:$RETROFIT_VERSION"
+    implementation "com.squareup.retrofit2:converter-moshi:$RETROFIT_VERSION"
+    implementation "com.squareup.retrofit2:converter-gson:$RETROFIT_VERSION"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$RETROFIT_VERSION"
 
-  implementation "io.reactivex.rxjava2:rxjava:2.2.0"
-  implementation "io.reactivex.rxjava2:rxandroid:2.1.0"
+    implementation "io.reactivex.rxjava2:rxjava:2.2.0"
+    implementation "io.reactivex.rxjava2:rxandroid:2.1.0"
 
-  implementation "com.jakewharton.byteunits:byteunits:0.9.1"
-  implementation "com.jakewharton.threetenabp:threetenabp:1.1.0"
-  implementation "com.jakewharton.timber:timber:4.7.1"
-  implementation "com.jakewharton.picasso:picasso2-okhttp3-downloader:1.1.0"
+    implementation "com.jakewharton.byteunits:byteunits:0.9.1"
+    implementation "com.jakewharton.threetenabp:threetenabp:1.1.0"
+    implementation "com.jakewharton.timber:timber:4.7.1"
+    implementation "com.jakewharton.picasso:picasso2-okhttp3-downloader:1.1.0"
 
-  implementation 'org.greenrobot:eventbus:3.1.1'
+    implementation 'org.greenrobot:eventbus:3.1.1'
 
-  implementation 'com.google.dagger:dagger:2.14.1'
-  implementation 'com.android.support:support-v4:27.1.1'
-  implementation 'com.android.support:support-vector-drawable:27.1.1'
-  kapt 'com.google.dagger:dagger-compiler:2.14.1'
+    implementation 'com.google.dagger:dagger:2.14.1'
+    implementation 'com.android.support:support-v4:27.1.1'
+    implementation 'com.android.support:support-vector-drawable:27.1.1'
+    kapt 'com.google.dagger:dagger-compiler:2.14.1'
 
-  implementation "com.f2prateek.rx.preferences:rx-preferences:1.0.2"
+    implementation "com.f2prateek.rx.preferences:rx-preferences:1.0.2"
 
-  implementation 'com.github.MatteoBattilana:WeatherView:2.0.3'
+    implementation 'com.github.MatteoBattilana:WeatherView:2.0.3'
 
-  implementation 'io.nlopez.smartlocation:library:3.3.3'
+    implementation 'io.nlopez.smartlocation:library:3.3.3'
 
-  implementation 'com.karumi:dexter:5.0.0'
+    implementation 'com.karumi:dexter:5.0.0'
 
-  implementation 'com.facebook.shimmer:shimmer:0.2.0'
+    implementation 'com.facebook.shimmer:shimmer:0.2.0'
 
-  implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-  implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:0.26.1"
-  implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:0.26.1"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:0.26.1"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:0.26.1"
 
-  implementation 'com.github.ybq:Android-SpinKit:1.1.0'
+    implementation 'com.github.ybq:Android-SpinKit:1.1.0'
 
-  implementation "android.arch.persistence.room:runtime:$ROOM_VERSION"
-  annotationProcessor "android.arch.persistence.room:compiler:$ROOM_VERSION"
-  kapt "android.arch.persistence.room:compiler:$ROOM_VERSION"
+    implementation "android.arch.persistence.room:runtime:$ROOM_VERSION"
+    annotationProcessor "android.arch.persistence.room:compiler:$ROOM_VERSION"
+    kapt "android.arch.persistence.room:compiler:$ROOM_VERSION"
 
-  debugImplementation "com.facebook.stetho:stetho:$FACEBOOK_VERSION"
-  debugImplementation "com.facebook.stetho:stetho-okhttp3:$FACEBOOK_VERSION"
-  debugImplementation "com.facebook.stetho:stetho-timber:$FACEBOOK_VERSION@aar"
+    debugImplementation "com.facebook.stetho:stetho:$FACEBOOK_VERSION"
+    debugImplementation "com.facebook.stetho:stetho-okhttp3:$FACEBOOK_VERSION"
+    debugImplementation "com.facebook.stetho:stetho-timber:$FACEBOOK_VERSION@aar"
+
+    implementation 'com.android.support:multidex:1.0.3'
 }
